[project]
name = "flask-dsbd"
version = "0.1.0"
description = "Simple Flask Dashboard."
readme = "README.md"
authors = [
    { name = "Takanashi", email = "nao69alter@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
]

[project.scripts]
app = "flask_dsbd.app:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.19",
]

[tool.ruff]
cache-dir = ".ci_cache/.ruff_cache"
target-version = "py312"
line-length = 80

format.skip-magic-trailing-comma = false

lint.select = ["E", "F", "I", "B", "UP"]
lint.ignore = ["E501"]

lint.isort.force-single-line = false
lint.isort.lines-after-imports = 2
lint.isort.section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]
lint.isort.order-by-type = true

[tool.mypy]
cache_dir = ".ci_cache/.mypy_cache"
files = ["src", "tests"]
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = false

[tool.pytest.ini_options]
cache_dir = ".ci_cache/.pytest_cache"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
log_cli = false
